--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,17 @@
 <resources>
-
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
+        <!-- actionbar的背景色-->
+        <item name="colorPrimary">@color/red</item>
+        <!-- 状态栏的背景色-->
+        <item name="colorPrimaryDark">@color/red</item>
+        <!-- actionbar的字体颜色-->
+        <item name="android:textColorPrimary">@color/white</item>
+        <!--显示在actionbar上的menu字体颜色 5.0用-->
+        <item name="android:actionMenuTextColor">@color/white</item>
+        <!--显示在actionbar上的menu字体颜色 5.0以下用-->
+        <item name="actionMenuTextColor">@color/white</item>
     </style>
 
 </resources>
