--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="red">#e04c3e</color>
+    <color name="select_orange">#e4a744</color>
+    <color name="select_purple">#953c95</color>
+    <color name="select_green">#59b984</color>
+    <color name="select_blue">#1599a8</color>
+    <color name="select_black">#686667</color>
+    <color name="select_grey">#989898</color>
     <color name="white">#ffffff</color>
 </resources>
