--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,6 +3,9 @@
     <string-array name="names">
         <item>实现加入购物车效果</item>
         <item>流式布局（热门标签）</item>
+        <item>RecyclerView</item>
+        <item>属性动画</item>
+        <item>刮刮卡</item>
         <item>简单贪吃蛇（SuifaceView）</item>
         <item>viewpager实现画廊效果</item>
         <item>生成条形码+生成二维码+扫码</item>
@@ -13,6 +16,9 @@
     <string-array name="classes">
         <item>com.qingfengmy.ui.TabHostActivity</item>
         <item>com.qingfengmy.ui.FlowLayoutActivity</item>
+        <item>com.qingfengmy.ui.RecyclerActivity</item>
+        <item>com.qingfengmy.ui.AnimatorActivity</item>
+        <item>com.qingfengmy.ui.GuaGuakaActivity</item>
         <item>qingfengmy.demo.ui.SnackGameActivity</item>
         <item>qingfengmy.demo.ui.ViewPagerMultiFragment</item>
         <item>"qingfengmy.demo.ui.CreateCodeActivity"</item>
