--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="select_black">#686667</color>
     <color name="select_grey">#989898</color>
     <color name="white">#ffffff</color>
+    <color name="first_gray">#474747</color>
+    <color name="second_gray">#8b8b8b</color>
+    <color name="third_gray">#a8a8a8</color>
+    <color name="red_light">#ffff4444</color>
+    <color name="green_light">#ff99cc00</color>
+    <color name="orange_light">#ffffbb33</color>
+    <color name="blue_light">#ff33b5e5</color>
 </resources>
