--- a/app/src/main/res/layout/activity_animator.xml
+++ b/app/src/main/res/layout/activity_animator.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/title_bar"></include>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,6 +31,7 @@
 
     <RelativeLayout
         android:layout_margin="20dp"
+        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -96,6 +101,7 @@
 
     <RelativeLayout
         android:layout_margin="20dp"
+        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
