--- a/app/src/main/res/layout/item_multipe_select.xml
+++ b/app/src/main/res/layout/item_multipe_select.xml
@@ -14,7 +14,7 @@
 
         <ImageView
             android:id="@+id/product_select_img"
-            android:background="@drawable/product_selector"
+            android:background="@drawable/multi_selector"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true" />
