--- a/app/src/main/res/layout/activity_multipeselect.xml
+++ b/app/src/main/res/layout/activity_multipeselect.xml
@@ -25,6 +25,7 @@
             android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <ImageView
@@ -33,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:textSize="16sp"
-                android:background="@drawable/product_selector"
+                android:background="@drawable/multi_selector"
                 android:textColor="#ffffff" />
 
             <TextView
@@ -52,7 +53,7 @@
                 android:textColor="#ffffff"
                 android:layout_marginLeft="10dp"
                 android:layout_gravity="center_vertical"
-                android:text="(选择所有商品上架)" />
+                android:text="(选择所有)" />
         </LinearLayout>
     </RelativeLayout>
 
