--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,6 +10,7 @@
         <item>listview单选</item>
         <item>listview多选</item>
         <item>viewpager实现画廊效果</item>
+        <item>QQ侧滑</item>
         <item>生成条形码+生成二维码+扫码</item>
         <item>选取和截取相册图片</item>
     </string-array>
@@ -23,7 +24,8 @@
         <item>com.qingfengmy.ui.SingleSelecterActivity</item>
         <item>com.qingfengmy.ui.MultipeSelectActivity</item>
         <item>com.qingfengmy.ui.ViewPagerMultiActivity</item>
-        <item>"qingfengmy.demo.ui.CreateCodeActivity"</item>
-        <item>"qingfengmy.demo.ui.PictureActivity"</item>
+        <item>com.qingfengmy.ui.SlidingMenuActivity</item>
+        <item>com.qingfengmy.ui.CreateCodeActivity</item>
+        <item>"com.qingfengmy.ui.PictureActivity"</item>
     </string-array>
 </resources>
