--- a/app/src/main/res/drawable/checkbox_selector.xml
+++ b/app/src/main/res/drawable/checkbox_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/btn_product_selected" android:state_checked="true"/>
+    <item android:drawable="@drawable/btn_selected" android:state_checked="true"/>
  <!-- 选中时效果 -->
     <item android:drawable="@drawable/translate" android:state_checked="false"/>
  <!-- 未选中时效果 -->
