--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,4 +47,11 @@
         <item name="android:scaleType">centerInside</item>
     </style>
 
+    <style name="progressbar_style1">
+        <item name="android:maxWidth">136.0dip</item>
+        <item name="android:maxHeight">106.0dip</item>
+        <item name="android:indeterminateDrawable">@animator/loading</item>
+        <item name="android:minWidth">68.0dip</item>
+        <item name="android:minHeight">53.0dip</item>
+    </style>
 </resources>
