--- a/app/src/main/res/menu/menu_done.xml
+++ b/app/src/main/res/menu/menu_done.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
-        android:id="@+id/menu_done"
+        android:id="@+id/action_done"
         app:showAsAction="ifRoom"
         android:title="确定"/>
 </menu>
