--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -14,6 +14,7 @@
         <item>生成条形码+生成二维码+扫码</item>
         <item>选取和截取相册图片</item>
         <item>上拉加载更多和下拉刷新</item>
+        <item>Viewpager切换动画</item>
     </string-array>
     <string-array name="classes">
         <item>com.qingfengmy.ui.TabHostActivity</item>
@@ -29,5 +30,6 @@
         <item>com.qingfengmy.ui.CreateCodeActivity</item>
         <item>"com.qingfengmy.ui.PictureActivity"</item>
         <item>"com.qingfengmy.ui.RefreshListViewActivity"</item>
+        <item>"com.qingfengmy.ui.PageTransformerActivity"</item>
     </string-array>
 </resources>
