--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,11 +7,11 @@
         <!-- 状态栏的背景色-->
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <!-- actionbar的字体颜色-->
-        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
         <!--显示在actionbar上的menu字体颜色 5.0用-->
-        <item name="android:actionMenuTextColor">@color/white</item>
+        <item name="android:actionMenuTextColor">@color/primary_text</item>
         <!--显示在actionbar上的menu字体颜色 5.0以下用-->
-        <item name="actionMenuTextColor">@color/white</item>
+        <item name="actionMenuTextColor">@color/primary_text</item>
         <!-- 没标题栏-->
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
@@ -57,4 +57,5 @@
         <item name="android:minWidth">68.0dip</item>
         <item name="android:minHeight">53.0dip</item>
     </style>
+
 </resources>
