--- a/app/src/main/res/layout/activity_cutpic.xml
+++ b/app/src/main/res/layout/activity_cutpic.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".CutPicActivity">
+    tools:context=".CutPicActivity"
+    android:fitsSystemWindows="true">
 
     <include
         android:id="@+id/toolbar"
