--- a/app/src/main/res/layout/activity_createcode.xml
+++ b/app/src/main/res/layout/activity_createcode.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:fitsSystemWindows="true">
 
     <include
         android:id="@+id/toolbar"
