--- a/app/src/main/res/layout/activity_guaguaka.xml
+++ b/app/src/main/res/layout/activity_guaguaka.xml
@@ -4,7 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/make_bg"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:fitsSystemWindows="true">
 
     <include
         android:id="@+id/toolbar"
