--- a/app/src/main/res/layout/activity_multipeselect.xml
+++ b/app/src/main/res/layout/activity_multipeselect.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:fitsSystemWindows="true">
 
     <include
         android:id="@+id/toolbar"
