--- a/app/src/main/res/layout/activity_slidingmenu.xml
+++ b/app/src/main/res/layout/activity_slidingmenu.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:background="@color/white"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <com.qingfengmy.ui.view.SlidingMenu
         android:id="@+id/host_content"
