--- a/app/src/main/res/menu/menu_pager.xml
+++ b/app/src/main/res/menu/menu_pager.xml
@@ -2,18 +2,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
-        android:id="@+id/menu_1"
-        android:title="效果1" />
+        android:id="@+id/transformer_default"
+        android:title="default" />
     <item
-        android:id="@+id/menu_2"
-        android:title="效果2" />
+        android:id="@+id/transformer_accordion"
+        android:title="accordion-手风琴" />
     <item
-        android:id="@+id/menu_3"
-        android:title="效果3" />
+        android:id="@+id/transformer_depth"
+        android:title="depth" />
     <item
-        android:id="@+id/menu_4"
-        android:title="效果4" />
+        android:id="@+id/transformer_fliphorizontal"
+        android:title="fliphorizontal" />
     <item
-        android:id="@+id/menu_5"
-        android:title="效果5" />
+        android:id="@+id/transformer_rotatedown"
+        android:title="rotatedown" />
+    <item
+        android:id="@+id/transformer_rotateup"
+        android:title="rotateup" />
+    <item
+        android:id="@+id/transformer_stack"
+        android:title="stack" />
+    <item
+        android:id="@+id/transformer_table"
+        android:title="table" />
+    <item
+        android:id="@+id/transformer_zoomout"
+        android:title="zoomout" />
+    <item
+        android:id="@+id/transformer_zoomin"
+        android:title="zoomin" />
+    <item
+        android:id="@+id/transformer_github"
+        android:title="daimajia" />
 </menu>
