--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="title_bar_size">20sp</dimen>
     <dimen name="text16">16sp</dimen>
+    <dimen name="text18">18sp</dimen>
     <dimen name="pager_margin">40dp</dimen>
 
     <!-- Fab button -->
