--- a/app/src/main/res/layout/layout_empty.xml
+++ b/app/src/main/res/layout/layout_empty.xml
@@ -10,6 +10,6 @@
     android:shadowRadius="5"
     android:text="KitDemo"
     android:shadowColor="#f1f1f1"
-    android:background="#cccccc">
+    android:background="#fcfccf">
 
 </TextView>
