--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -19,6 +19,7 @@
         <item>BackgroundPagerActivity</item>
         <item>Volley学习</item>
         <item>stickyHeaderListView</item>
+        <item>树形结构</item>
     </string-array>
     <string-array name="classes">
         <item>com.qingfengmy.ui.TabHostActivity</item>
@@ -39,5 +40,26 @@
         <item>"com.qingfengmy.ui.BackgroundPagerActivity"</item>
         <item>"com.qingfengmy.ui.VolleyActivity"</item>
         <item>"com.qingfengmy.ui.StickyHeaderActivity"</item>
+        <item>"com.qingfengmy.ui.TreeActivity"</item>
+    </string-array>
+    <string-array name="blend_modes">
+        <item>Add</item>
+        <item>Clear</item>
+        <item>Darken</item>
+        <item>Destination (DST)</item>
+        <item>Destination atop (DST_ATOP)</item>
+        <item>Destination in (DST_IN)</item>
+        <item>Destination out (DST_OUT)</item>
+        <item>Destination over (DST_OVER)</item>
+        <item>Lighten</item>
+        <item>Multiply</item>
+        <item>Overlay</item>
+        <item>Screen</item>
+        <item>Source (SRC)</item>
+        <item>Source atop (SRC_ATOP)</item>
+        <item>Source in (SRC_IN)</item>
+        <item>Source out (SRC_OUT)</item>
+        <item>Source over (SRC_OVER)</item>
+        <item>XOR</item>
     </string-array>
 </resources>
