--- a/app/src/main/res/layout/activity_transition_demo.xml
+++ b/app/src/main/res/layout/activity_transition_demo.xml
@@ -21,19 +21,19 @@
         card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="5dp">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin15"
-            android:textColor="@color/color_first_gray"
-            android:text="share：分享元素"
-            android:textSize="24sp" />
+        <ImageView
+            android:id="@+id/image"
+            android:src="@drawable/ic_launcher"
+            android:layout_gravity="center"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_margin="@dimen/margin15" />
     </android.support.v7.widget.CardView>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="@dimen/margin15"
         android:textSize="@dimen/text16"
         android:textColor="@color/color_first_gray"
         android:text="@string/volley" />
