--- a/app/src/main/res/layout/item_jokelist.xml
+++ b/app/src/main/res/layout/item_jokelist.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     android:layout_margin="8dp"
     card_view:cardBackgroundColor="@android:color/white"
+    card_view:contentPadding="@dimen/margin15"
+    card_view:cardUseCompatPadding="true"
     card_view:cardCornerRadius="8dp">
 
     <LinearLayout
