--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
+        android:id="@+id/menu_right"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/git_icon"
+        android:title="打开"/>
+    <item
         android:id="@+id/menu_about"
         app:showAsAction="ifRoom"
         android:icon="@drawable/git_icon"
