--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,9 +6,10 @@
     tools:context="cn.mchina.wfenxiao.ui.SplashActivity">
 
     <ImageView
+        android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/image6" />
+        android:src="@drawable/ic_launcher" />
 
 </RelativeLayout><!-- android:paddingLeft="73dp"-->
