--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -22,6 +22,7 @@
         <item>树形结构</item>
         <item>canvas绘制折线图</item>
         <item>HideOnScrollExample</item>
+        <item>仿微信界面</item>
     </string-array>
     <string-array name="classes">
         <item>com.qingfengmy.ui.TabHostActivity</item>
@@ -45,6 +46,7 @@
         <item>"com.qingfengmy.ui.TreeActivity"</item>
         <item>"com.qingfengmy.ui.BrokenLineActivity"</item>
         <item>"com.qingfengmy.ui.HideOnScrollActivity"</item>
+        <item>"com.qingfengmy.ui.WeiXinActivity"</item>
     </string-array>
     <string-array name="blend_modes">
         <item>Add</item>
