--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -39,4 +39,10 @@
         <attr name="pstsTextSelectedAlpha" format="float" />
     </declare-styleable>
 
+    <declare-styleable name="ChangeColorIconView">
+        <attr name="weixin_icon" format="reference" />
+        <attr name="weixin_color" format="color" />
+        <attr name="weixin_text" format="string" />
+        <attr name="weixin_text_size" format="dimension" />
+    </declare-styleable>
 </resources>
