--- a/app/src/main/res/layout/activity_swiperefresh.xml
+++ b/app/src/main/res/layout/activity_swiperefresh.xml
@@ -15,15 +15,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.qingfengmy.ui.view.LoadMoreListView
-            android:id="@+id/list_view_with_empty_view_fragment_list_view"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:scrollbars="none"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
-        <com.qingfengmy.ui.view.EmptyView
-            android:id="@+id/empty_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></com.qingfengmy.ui.view.EmptyView>
-
     </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
