--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -40,7 +40,7 @@
 
         <ProgressBar
             android:id="@+id/progress"
-            style="@style/progressbar_style1"
+            style="@style/progressBar_Anim"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/layout"
