--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -23,6 +23,9 @@
         <item>canvas绘制折线图</item>
         <item>HideOnScrollExample</item>
         <item>仿微信界面</item>
+        <item>查看大图</item>
+        <item>三种自定义progressbar</item>
+        <item>阻尼效果的scrollview</item>
     </string-array>
     <string-array name="classes">
         <item>com.qingfengmy.ui.TabHostActivity</item>
@@ -47,6 +50,9 @@
         <item>"com.qingfengmy.ui.BrokenLineActivity"</item>
         <item>"com.qingfengmy.ui.HideOnScrollActivity"</item>
         <item>"com.qingfengmy.ui.WeiXinActivity"</item>
+        <item>"com.qingfengmy.ui.PhotoActivity"</item>
+        <item>"com.qingfengmy.ui.ProgressBarActivity"</item>
+        <item>"com.qingfengmy.ui.DumpActivity"</item>
     </string-array>
     <string-array name="blend_modes">
         <item>Add</item>
