--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -24,10 +24,10 @@
 
     <com.qingfengmy.ui.view.ViewPagerFixed
         android:id="@+id/big_view_pager"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_above="@+id/big_view_pager_index"
         android:layout_below="@+id/toolbar"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:layout_marginBottom="20dp"
         android:layout_gravity="center"
