--- a/app/src/main/res/layout/activity_statelistanimator.xml
+++ b/app/src/main/res/layout/activity_statelistanimator.xml
@@ -31,59 +31,10 @@
             android:textSize="14sp" />
     </android.support.v7.widget.CardView>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:orientation="vertical">
-
-            <TextView
-                android:background="@drawable/base_list_state"
-                android:id="@+id/button"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="200dp"
-                android:layout_height="200dp" />
-
-            <ImageView
-                android:id="@+id/img2"
-                android:src="@drawable/base_svg_1"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="200dp"
-                android:layout_height="200dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin15"
-                android:textColor="@color/color_first_gray"
-                android:text="时钟改变的是rotate属性"
-                android:textSize="16sp" />
-
-            <ImageView
-                android:id="@+id/img3"
-                android:src="@drawable/nine_to_five"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="200dp"
-                android:layout_height="200dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin15"
-                android:textColor="@color/color_first_gray"
-                android:text="笑脸改变的是pathdate属性"
-                android:textSize="16sp" />
-
-            <ImageView
-                android:id="@+id/img4"
-                android:src="@drawable/smiling_face"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="200dp"
-                android:layout_height="200dp" />
-        </LinearLayout>
-    </ScrollView>
+    <TextView
+        android:stateListAnimator="@anim/base_list_state"
+        android:background="@color/primary"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
 </LinearLayout>
