--- a/app/src/main/res/layout/item_jokelist.xml
+++ b/app/src/main/res/layout/item_jokelist.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/tools"
     android:id="@+id/cardview"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
+    android:layout_margin="10dp"
     card_view:cardBackgroundColor="@android:color/white"
-    card_view:contentPadding="@dimen/margin15"
+    card_view:contentPadding="10dp"
     card_view:cardUseCompatPadding="true"
     card_view:cardCornerRadius="8dp">
 
@@ -17,28 +18,12 @@
         android:layout_height="match_parent">
 
 
-        <FrameLayout
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/img"
+            android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/img"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/default_image" />
-
-            <TextView
-                android:id="@+id/gif"
-                android:background="#77f0f0f0"
-                android:text="gif"
-                android:layout_gravity="bottom|center_horizontal"
-                android:gravity="center_horizontal"
-                android:textColor="@color/color_first_gray"
-                android:textSize="@dimen/text30"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </FrameLayout>
+            android:layout_height="wrap_content"
+            fresco:placeholderImage="@drawable/default_image"/>
 
         <TextView
             android:id="@+id/textView"
