--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -27,9 +27,10 @@
         <item>查看大图</item>
         <item>三种自定义progressbar</item>
         <item>阻尼效果的scrollview</item>
-        <item>facebook的Fresco</item>
+        <item>批量定时器</item>
         <item>日期时间选择器</item>
         <item>Activity启动模式详解</item>
+        <item>断点续传</item>
     </string-array>
     <string-array name="classes">
         <item>com.qingfengmy.ui.TabHostActivity</item>
@@ -61,6 +62,7 @@
         <item>"com.qingfengmy.ui.FrescoActivity"</item>
         <item>"com.qingfengmy.ui.DateTimePickerActivity"</item>
         <item>"com.qingfengmy.ui.LaunchModeActivity"</item>
+        <item>"com.qingfengmy.ui.MultiThreadDownloadActivity"</item>
     </string-array>
     <string-array name="blend_modes">
         <item>Add</item>
