hyman的缩放图片

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -31,6 +31,8 @@
         <item>日期时间选择器</item>
         <item>Activity启动模式详解</item>
         <item>断点续传</item>
+        <item>万能适配器</item>
+        <item>自定义大图</item>
     </string-array>
     <string-array name="classes">
         <item>com.qingfengmy.ui.TabHostActivity</item>
@@ -63,6 +65,8 @@
         <item>"com.qingfengmy.ui.DateTimePickerActivity"</item>
         <item>"com.qingfengmy.ui.LaunchModeActivity"</item>
         <item>"com.qingfengmy.ui.MultiThreadDownloadActivity"</item>
+        <item>"com.qingfengmy.ui.CommonAdapterActivity"</item>
+        <item>"com.qingfengmy.ui.ZoomImageActivity"</item>
     </string-array>
     <string-array name="blend_modes">
         <item>Add</item>
