--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -33,6 +33,8 @@
         <item>断点续传</item>
         <item>万能适配器</item>
         <item>自定义大图</item>
+        <item>图片颜色操作</item>
+        <item>图片矩阵操作</item>
     </string-array>
     <string-array name="classes">
         <item>com.qingfengmy.ui.TabHostActivity</item>
@@ -67,6 +69,8 @@
         <item>"com.qingfengmy.ui.MultiThreadDownloadActivity"</item>
         <item>"com.qingfengmy.ui.CommonAdapterActivity"</item>
         <item>"com.qingfengmy.ui.ZoomImageActivity"</item>
+        <item>"com.qingfengmy.ui.ImageColorActivity"</item>
+        <item>"com.qingfengmy.ui.ImageMatirxActivity"</item>
     </string-array>
     <string-array name="blend_modes">
         <item>Add</item>
