--- a/app/src/main/res/layout/item_jokelist.xml
+++ b/app/src/main/res/layout/item_jokelist.xml
@@ -23,7 +23,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            fresco:placeholderImage="@drawable/default_image"/>
+            fresco:placeholderImage="@drawable/ic"/>
 
         <TextView
             android:id="@+id/textView"
