--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -36,6 +36,8 @@
         <item>图片颜色操作</item>
         <item>图片矩阵操作</item>
         <item>多行文本折叠展开效果</item>
+        <item> Android ViewDragHelper</item>
+        <item>抽奖盘</item>
     </string-array>
     <string-array name="classes">
         <item>com.qingfengmy.ui.TabHostActivity</item>
@@ -73,6 +75,8 @@
         <item>"com.qingfengmy.ui.ImageColorActivity"</item>
         <item>"com.qingfengmy.ui.ImageMatirxActivity"</item>
         <item>"com.qingfengmy.ui.MoreTextViewActivity"</item>
+        <item>"com.qingfengmy.ui.ViewDragHelperActivity"</item>
+        <item>"com.qingfengmy.ui.LuckPanActivity"</item>
     </string-array>
     <string-array name="blend_modes">
         <item>Add</item>
